--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
+/*
+Blue -   #18baff
+Light Blue - #12f3f3
+Green -  #00ff62
+Orange - #ff3d00
+Yellow - #ffba09
+*/
+
+@font-face {
+	font-family: 'NightLight';
+  src: local('NightLight'), 
+	url(./fonts/NightLight-Font.otf) format('truetype');
+}
+
+video {
+	object-fit: cover;
+	max-width: 900px;
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+	top: -40px;
+	left: 0;
+	z-index: -1;
+}
+
+.bg-image {
+	width: 100%;
+}
+
+h1, h2, h3, button {
+	font-family: 'NightLight', cursive;
+}
+
+p {
+	font-size: 1.1rem;
+	font-weight: 500;
+	margin-top: 80px;
+}
+
+main {
   text-align: center;
+  vertical-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home-text {
+	margin-top: 450px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+div {
+  	margin: auto;
+	width: 80%;
+	text-align: center;
+	font-family: 'Work Sans', sans-serif;
+}
+
+.modal {
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+	border-radius: 6px;
+	background-color: white;
+	padding: 1rem;
+	text-align: center;
+	width: 30rem;
+	z-index: 10;
+	position: fixed;
+	top: 20vh;
+	left: calc(50% - 15rem);
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  button {
+	font-size: 1.5rem;
+	margin-bottom: 50px;
+	background: transparent;
+	box-shadow: 0px 0px 0px transparent;
+	border: 0px solid transparent;
+	text-shadow: 0px 0px 0px transparent;
   }
-  to {
-    transform: rotate(360deg);
+  
+  button:hover {
+	cursor: pointer;
+	background: transparent;
+	box-shadow: 0px 0px 0px transparent;
+	border: 0px solid transparent;
+	text-shadow: 0px 0px 0px transparent;
   }
+  
+  button:active {
+	outline: none;
+	border: none;
+  }
+  
+  button:focus {
+	outline: 0;
+  }
+
+.arrow {
+	border: solid black;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 3px;
+	transform: rotate(45deg) scale(4);
+  	-webkit-transform: rotate(45deg) scale(4);
 }
+
