--- a/src/App.css
+++ b/src/App.css
@@ -7,97 +7,114 @@ Yellow - #ffba09
 */
 
 @font-face {
-	font-family: 'NightLight';
-  src: local('NightLight'), 
-	url(./fonts/NightLight-Font.otf) format('truetype');
+  font-family: "NightLight";
+  src: local("NightLight"), url(./fonts/NightLight-Font.otf) format("truetype");
 }
 
 video {
-	object-fit: cover;
-	max-width: 900px;
-	width: 100%;
-	height: 100vh;
-	position: fixed;
-	top: -40px;
-	left: 0;
-	z-index: -1;
+  position: static;
+  object-fit: cover;
+  width: 100%;
+  height: 100vh;
+  top: -80px;
+  z-index: -1;
 }
 
-.bg-image {
-	width: 100%;
+.page {
+  overflow-x: hidden;
 }
 
-h1, h2, h3, button {
-	font-family: 'NightLight', cursive;
+.background-wrapper {
+  height: 900px;
+  width: fit-content;
+  display: flex;
+  align-items: flex-end;
+  z-index: -3;
+}
+
+.content {
+  position: absolute;
+  padding: 3rem;
+  z-index: 5;
+  top: 400px;
+}
+
+h1,
+h2,
+h3,
+button {
+  font-family: "NightLight", cursive;
 }
 
 p {
-	font-size: 1.1rem;
-	font-weight: 500;
-	margin-top: 80px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-top: 80px;
 }
 
-main {
-  text-align: center;
-  vertical-align: center;
+.select {
+  margin-top: 120px;
+}
+
+.subject-name {
+  font-size: 12px;
 }
 
 .home-text {
-	margin-top: 450px;
+  margin-top: 450px;
 }
 
 div {
-  	margin: auto;
-	width: 80%;
-	text-align: center;
-	font-family: 'Work Sans', sans-serif;
+  text-align: center;
+  font-family: "Work Sans", sans-serif;
 }
 
 .modal {
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-	border-radius: 6px;
-	background-color: white;
-	padding: 1rem;
-	text-align: center;
-	width: 30rem;
-	z-index: 10;
-	position: fixed;
-	top: 20vh;
-	left: calc(50% - 15rem);
-  }
-
-  button {
-	font-size: 1.5rem;
-	margin-bottom: 50px;
-	background: transparent;
-	box-shadow: 0px 0px 0px transparent;
-	border: 0px solid transparent;
-	text-shadow: 0px 0px 0px transparent;
-  }
-  
-  button:hover {
-	cursor: pointer;
-	background: transparent;
-	box-shadow: 0px 0px 0px transparent;
-	border: 0px solid transparent;
-	text-shadow: 0px 0px 0px transparent;
-  }
-  
-  button:active {
-	outline: none;
-	border: none;
-  }
-  
-  button:focus {
-	outline: 0;
-  }
-
-.arrow {
-	border: solid black;
-	border-width: 0 3px 3px 0;
-	display: inline-block;
-	padding: 3px;
-	transform: rotate(45deg) scale(4);
-  	-webkit-transform: rotate(45deg) scale(4);
+  display: flex;
+  height: 1000px;
+  width: 100%;
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
+.modal-content {
+  align-content: space-around;
+}
+
+button {
+  font-size: 1.5rem;
+  margin-bottom: 50px;
+  background: transparent;
+  box-shadow: 0px 0px 0px transparent;
+  border: 0px solid transparent;
+  text-shadow: 0px 0px 0px transparent;
+}
+
+button:hover {
+  cursor: pointer;
+  background: transparent;
+  box-shadow: 0px 0px 0px transparent;
+  border: 0px solid transparent;
+  text-shadow: 0px 0px 0px transparent;
+}
+
+button:active {
+  outline: none;
+  border: none;
+}
+
+button:focus {
+  outline: 0;
+}
+
+.arrow {
+  margin-top: 70px;
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg) scale(4);
+  -webkit-transform: rotate(45deg) scale(4);
+}
