--- a/src/App.css
+++ b/src/App.css
@@ -270,6 +270,11 @@ button:focus {
 }
 
 iframe {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
+  position: absolute;
+  top: 4%;
+  bottom: 0;
+  left: 5%;
+  right: 0;
 }
